--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link
             href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic"
             rel="stylesheet" type="text/css" />
-            <link
+        <link
             href="https://fonts.googleapis.com/css?family=Alef:400,700,400italic,700italic"
             rel="stylesheet" type="text/css" />
         <link
@@ -26,9 +26,9 @@
     </head>
     <body>
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
+        <!-- <nav class="navbar navbar-expand-lg navbar-light" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <!-- <a class="navbar-brand" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand" href="index.html">Start Bootstrap</a>
                 <button class="navbar-toggler" type="button"
                     data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                     aria-controls="navbarResponsive" aria-expanded="false"
@@ -46,10 +46,10 @@
                                 py-lg-4" href="post.html">Sample Post</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3
                                 py-lg-4" href="contact.html">Contact</a></li>
-                    </ul> -->
+                    </ul>
                 </div>
             </div>
-        </nav>
+        </nav> -->
         <!-- Page Header-->
         <header class="masthead" style="background-color:
             #004aad">
@@ -58,11 +58,19 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="site-heading">
                             <h1 style="font-family:'Helvetica';">Tideseed</h1>
-                            <div class="col-md-6 col-lg-6 col-xl-6"><span class="subheading" style="font-family:'Helvetica';">OPERATIONS RESEARCH AND REINFORCEMENT LEARNING</span></div>
-                            <div style="height:200px"></div>
-                            <span class="subheading" style="font-family:'Helvetica';">Details soon...</span>
-                            <div style="height:200px"></div>
-                            <a href="https://forms.gle/3UAYWnLyxiNbDoMt8" target="_blank"><button class="btn btn-info btn-lg" type="submit" style="width:200px;background-color:#5e17eb;border-radius:25px;color:#fff;font-family:'Helvetica';font-weight:600;border-color:transparent;">Contact</button></a>
+                            <div class="col-md-6 col-lg-6 col-xl-6"><span
+                                    class="subheading"
+                                    style="font-family:'Helvetica';">OPERATIONS
+                                    RESEARCH AND REINFORCEMENT LEARNING</span></div>
+                            <div style="height:7rem"></div>
+                            <span class="subheading"
+                                style="font-family:'Helvetica';">Details
+                                coming...</span>
+                            <div style="height:7rem"></div>
+                            <a href="https://forms.gle/3UAYWnLyxiNbDoMt8"
+                                target="_blank"><button class="btn btn-info
+                                    btn-lg" type="submit"
+                                    style="width:200px;background-color:#5e17eb;border-radius:25px;color:#fff;font-family:'Helvetica';font-weight:600;border-color:transparent;">Contact</button></a>
                         </div>
                     </div>
                 </div>
